refactor: #66 Resolve N+1 problem by applying fetch join in custom repository